--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         </div>
     </div>
 
-    <div class="section6">
+    <div>
         <footer>
             <p>&copy; 2024 Meu Site de Viagens</p>
         </footer>
